--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="H​appy birthday VIDYA, Many many happy returns of the day!!Ammulu, How God Made You">
+    <meta name="keywords" content="Happy birthday VIDYA, Many many happy returns of the day!!Ammulu, How God Made You">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Happy Birthday Ammulu</title>
+     <link rel = "icon" href="images/icon.svg"
+              type = "image/x-icon">   
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -50,7 +52,7 @@
           <div class="u-layout-row">
             <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-28-xl u-size-30-lg u-size-30-md u-size-30-sm u-size-30-xs u-layout-cell-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
               <div class="u-container-layout u-container-layout-1">
-                <h1 class="u-custom-font u-font-lobster u-text u-text-custom-color-1 u-text-1" data-animation-name="fadeIn" data-animation-duration="2000" data-animation-delay="0" data-animation-direction="">H​app​y birthday VI<span style="font-weight: 700;"></span>DYA
+                <h1 class="u-custom-font u-font-lobster u-text u-text-custom-color-1 u-text-1" data-animation-name="fadeIn" data-animation-duration="2000" data-animation-delay="0" data-animation-direction="">H​app​y birthday <span style="font-weight: 700;"></span>VIDYA
                 </h1>
               </div>
             </div>
@@ -274,7 +276,7 @@
                       <div class="u-align-left u-container-style u-layout-cell u-left-cell u-shape-rectangle u-size-60 u-layout-cell-2">
                         <div class="u-container-layout u-valign-top u-container-layout-2">
                           <h1 class="u-custom-font u-font-lobster u-text u-text-white u-title u-text-1">Journey</h1>
-                          <p class="u-text u-text-body-alt-color u-text-2">One think I always like about you is... In this 21 years of your journey... There's still that small kid in you.... Keep it safe.. 😊. </p>
+                          <p class="u-text u-text-body-alt-color u-text-2">One thing I always like about you is... In this 21 years of your journey... There's still that small kid in you.... Keep it safe.. 😊. </p>
                         </div>
                       </div>
                     </div>
@@ -338,7 +340,7 @@
               </div>
               <div class="u-container-style u-custom-color-2 u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h2 class="u-align-center u-custom-font u-font-lobster u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="2000" data-animation-delay="0" data-animation-direction="">Reason For My Unending Love Towards You</h2>
+                  <h2 class="u-align-center u-custom-font u-font-lobster u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="2000" data-animation-delay="0" data-animation-direction="">Things I wanted to say you but never did</h2>
                   <p class="u-align-left u-custom-font u-font-georgia u-text u-text-2" data-animation-name="fadeIn" data-animation-duration="2000" data-animation-delay="1000">Oh dear! There's a lot of resons but I'll do my best to keep it simple. I love you. I love you because you can bring me out of my sadness and make me the happiest person in the world with just a smile. I love you because you make me want to be a better person. I love you because of how you make me feel even when you're not around and love how you make me feel like i'm home. I love the small things like how my hand fits perfectly in yours, how nice and sweet your voice is and honestly I know I'm in love because I notice small things about you. I notice how pretty the colors of your eyes are, how amazing your smile is. Also when I'm able to make you laugh I fell so accomplished because I know that I'm the reason you smile. And even when you tease the hell out of me I love it. Every minute of it.Finally I love you&nbsp; because you make me complete.</p>
                 </div>
               </div>
